# bamba3

./: .gitignore  Cargo.toml  ir.bc  readme.md  test.c  valgrind.out
.github/workflows/: rust.yml
examples/: bamsh.bam  game.bam  test0.bam  test1.bam  test10.bam  test11.bam  test12.bam  test2.bam  test3.bam  test4.bam  test5.bam  test6.bam  test7.bam  test8.bam  test9.bam  unsort.bam
examples/assets/: palette.ase
libs/: ecs.bam  sdl.bam
shost/: error.bam  main.bam  nodes.bam  position.bam  scanner.bam
src/: errors.rs  lib.rs  main.rs  parser.rs  position.rs  scanner.rs  visitable.rs
src/nodes/: and_expression.rs  block_statement.rs  break_statement.rs  call_expression.rs  compare_expression.rs  const_string_expression.rs  dollar_expression.rs  drop_expression.rs  expression_statement.rs  factor_expression.rs  for_statement.rs  function_expression.rs  ident_expression.rs  if_statement.rs  include_expression.rs  new_expression.rs  or_expression.rs  paren_expression.rs  primary_expression.rs  prop_expression.rs  return_statement.rs  statement.rs  term_expression.rs  top_expression.rs  unary_expression.rs  while_statement.rs
std/: algorithm.bam  core.bam  fs.bam  match.bam  std.bam  types.bam
std/algorithm/: collect.bam  hash.bam  mapper.bam
std/core/: entry.bam
std/fs/: dir.bam  file.bam
std/types/: arraylist.bam  box.bam  closure.bam  hashmap.bam  hashset.bam  interface.bam  linkedlists.bam  option.bam  range.bam  result.bam  slice.bam  string.bam
tests/: parser.rs
tests/raw/: add_def.bam
